# dan-lab

./: .gitignore  .pre-commit-config.yaml  README.md  pylintrc  pyproject.toml  requirements.txt
dan-lab/: download_weather_data.py  scrape_weather_stations.py  weather_api_interaction.py
danlab/: __init__.py  climate_station_info.py  daily_data.py  data_clean.py  date_conversions.py  hourly_data.py  province.py  scrape_weather_stations.py
danlab/api/: __init__.py  alberta_counties.py  bbox.py  climate_station.py  climate_station_info.py  daily_data.py  hourly_data.py  id_utils.py  query_match.py  queryables.py
danlab/climate/: __init__.py  data_integrity.py
danlab/file_manage/: __init__.py  csv_join.py  write_daily_to_csv.py
danlab/geospatial/: __init__.py  proximity.py
danlab/scrape/: __init__.py  download_weather_data.py  scrape_weather_stations.py
danlab/util/: __init__.py  log_util.py
examples/: find_daily_per_county.py  get_nearest_station.py  lethbridge_a_climate_normals.py
scripts/: daily_climate_data_requester.py  hourly_climate_data_requester.py  prot_area.py  question_and_answer.py  station_requester.py
test/api/: test_alberta_counties.py  test_bbox.py  test_climate_station.py  test_daily_data.py  test_hourly_data.py  test_query_match.py
test/geospatial/: test_proximity.py
